# transects

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: develop.yml
tests/: test_bird_transects.py  test_cli.py  test_filter_resident_birds.py  test_population_estimate.py  test_rodent_transects.py
tests/data/: bird_records.csv  bird_transects.csv  observed_bird_species.csv  rabbit_population.json  rodent_captures.csv  transectos_conejos_isla_clarion.csv
transects/: __init__.py  bird_transects.py  cli.py  filter_resident_birds.py  population_estimate.py  rodent_transects.py
