[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Ciencia de Datos • GECI"
author-email = "ciencia.datos@islas.org.mx"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"
home-page = "https://github.com/IslasGECI/transects"
module = "transects"
requires = [
	"bootstrapping_tools==3.*",
	"geci_distance @ git+https://github.com/IslasGECI/geci_distance.git@v0.1.1",
	"lmfit",
	"pandas",
]
requires-python=">=3.9"
